# elysium_proto

./: .gitignore  README.md  elysium.proto  elysium_service.proto
elysium_api/: Cargo.toml
elysium_dart/: pubspec.yaml
elysium_dart/.dart_tool/: package_config.json  package_graph.json
elysium_dart/lib/: elysium_dart.dart
elysium_dart/lib/chat/v1/: chat.pb.dart  chat.pbgrpc.dart  chat.pbjson.dart
elysium_dart/lib/common/v1/: common.pb.dart  common.pbenum.dart  common.pbjson.dart
elysium_dart/lib/general/v1/: general.pb.dart  general.pbjson.dart
elysium_dart/lib/resource/v1/: resource.pb.dart  resource.pbgrpc.dart  resource.pbjson.dart
elysium_dart/lib/testing/v1/: testing.pbgrpc.dart
elysium_dart/lib/user/v1/: user.pb.dart  user.pbenum.dart  user.pbgrpc.dart  user.pbjson.dart
elysium_dart/tools/: generate.dart
elysium_rust/: Cargo.toml  build.rs
elysium_rust/src/: lib.rs
proto/chat/v1/: chat.proto
proto/common/v1/: common.proto
proto/general/v1/: general.proto
proto/resource/v1/: resource.proto
proto/testing/v1/: testing.proto
proto/user/v1/: user.proto
