[package]
name = "elysium_rust"
description = "The official Elysium protocol buffers API."
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { version = "0.14.5", default-features = false, features = ["codegen"] }
tonic-prost = "0.14.5"
prost = "0.14.3"
surrealdb-types = "3.0.5"
surrealdb-types-derive = "3.0.5"
serde = { version = "1.0.228", features = ["derive"] }

[build-dependencies]
tonic-prost-build = "0.14.5"
walkdir = "2.5.0"
